<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAssess"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvAssessId"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:hint="@string/tv_check_my_report"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAssessVoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_assess_voice"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tvAssessVoiceNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAssessContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_assess_content"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tvAssessContentNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAssessSympathy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_assess_sympathy"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tvAssessSympathyNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAssessPower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_assess_power"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvAssessPowerNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>